--- a/p8105_hw5_crf2147.Rmd
+++ b/p8105_hw5_crf2147.Rmd
@@ -80,6 +80,7 @@ combined_df = combined_df %>%
 Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups
 
 ```{r}
+#making spaghetti plot
 combined_df %>% 
   mutate(unique_id = paste(id, group, sep = "_")) %>% 
   ggplot(aes(y = value, x = week, group = unique_id, color = group)) +
@@ -101,3 +102,109 @@ It appears that the control group tended to have lower values than the experimen
 
 
 # Problem 3 
+
+When designing an experiment or analysis, a common question is whether it is likely that a true effect will be detected – put differently, whether a false null hypothesis will be rejected. The probability that a false null hypothesis is rejected is referred to as power, and it depends on several factors, including: the sample size; the effect size; and the error variance. In this problem, you will conduct a simulation to explore power in a simple linear regression.
+
+First set the following design elements:
+
+Fix n=30
+Fix xi1 as draws from a standard Normal distribution
+Fix β0=2
+Fix σ2=50
+Set β1=0. Generate 10000 datasets from the model
+yi=β0+β1xi1+ϵi
+with ϵi∼N[0,σ2]. For each dataset, save β̂ 1 and the p-value arising from a test of H:β1=0 using α=0.05. Hint: to obtain the estimate and p-value, use broom::tidy to clean the output of lm.
+
+```{r}
+#writing function to run regression 
+sim_regression = function(beta1, n = 30, beta0 = 2) {
+  
+  sim_data = tibble(
+    x = rnorm(n),
+    y = beta0 + beta1 * x + rnorm(n, 0, sqrt(50)) 
+  )
+  
+  ls_fit = broom::tidy(lm(y ~ x, data = sim_data))
+  
+  tibble(
+    beta1_hat = pull(ls_fit, estimate)[2],
+    beta1_hat_pvalue = pull(ls_fit, p.value)[2]
+  )
+}
+```
+
+```{r}
+#running simulation 10000 for beta1 = 0 
+output = vector("list", 10000)
+
+for (i in 1:10000) {
+  output[[i]] = sim_regression(0)
+}
+
+results_b1_0 = bind_rows(output)
+```
+
+Repeat the above for β1={1,2,3,4,5,6}
+
+
+```{r}
+#running sim for beta1 ={0,1,2,3,4,5,6}
+sim_results = 
+  tibble(beta1 = 0:6) %>% 
+  mutate(
+    output_lists = map(.x = beta1, ~rerun(10000, sim_regression(beta1 = .x))),
+    estimate_dfs = map(output_lists, bind_rows)) %>% 
+  select(-output_lists) %>% 
+  unnest(estimate_dfs)
+```
+
+
+```{r}
+#plotting proportion of rejections by beta1
+sim_results %>% 
+  group_by(beta1) %>% 
+  filter(beta1_hat_pvalue<0.05) %>% 
+  count() %>% 
+  mutate(prop = n/10000) %>% 
+  ggplot(aes(y = prop, x = beta1)) +
+  geom_line() +
+  geom_point() + 
+  labs(title = "Proportion of null rejections by true Beta 1 value", y = "Proportion") + 
+  theme_bw() +
+  scale_x_continuous(name="Beta 1", breaks=0:6) 
+```
+
+As effect size ($\beta_1$) increases, the probability we reject the null, and therefore the power increases significantly. By the time $\beta_1 = 6$ given the experiment conditions, we are almost certain to reject the null. 
+
+
+
+```{r}
+all_beta_avgs = sim_results %>% 
+  group_by(beta1) %>% 
+  summarise(all_beta1 = mean(beta1_hat))  
+
+sig_beta_avgs = sim_results %>% 
+  filter(beta1_hat_pvalue<0.05) %>% 
+  group_by(beta1) %>% 
+  summarise(sig_beta1 = mean(beta1_hat))  
+  
+
+left_join(all_beta_avgs, sig_beta_avgs, by = "beta1") %>% 
+  pivot_longer(cols = c(all_beta1, sig_beta1), names_to = "type", values_to = "avg") %>% 
+  ggplot(aes(x = beta1, y = avg, color = type)) + 
+  geom_line() +
+  geom_point() + 
+  labs(title = "Average approximate beta by true beta value") + 
+  viridis::scale_color_viridis(
+    discrete = TRUE, 
+    name = "",
+    breaks=c("all_beta1", "sig_beta1"),
+    labels=c("all beta", "significant only beta")) + 
+  theme_bw() +
+  scale_x_continuous(name="true beta 1", breaks=0:6) + 
+  scale_y_continuous(name="average beta 1 hat", breaks=0:6) + 
+  theme(legend.position = "bottom") 
+  
+
+```
+
