cleaned formatting, final edits

--- a/p8105_hw5_crf2147.md
+++ b/p8105_hw5_crf2147.md
@@ -1,20 +1,27 @@
----
-title: "Homework 5"
-author: "Charlotte Fowler"
-date: "11/8/2019"
-output: github_document
----
+Homework 5
+================
+Charlotte Fowler
+11/8/2019
 
+# Problem 1
 
-# Problem 1 
-```{r}
+``` r
 #loading packages
 library(tidyverse)
 ```
 
+    ## ── Attaching packages ────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
 
+    ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
+    ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
+    ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
+    ## ✔ readr   1.3.1     ✔ forcats 0.4.0
 
-```{r}
+    ## ── Conflicts ───────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+
+``` r
 #reading in data
 set.seed(10)
 
@@ -23,9 +30,7 @@ iris_with_missing = iris %>%
   mutate(Species = as.character(Species))
 ```
 
-
-
-```{r}
+``` r
 #writing function to fill in missing values
 missing_values_fix = function(x){
   if (is.numeric(x)) {
@@ -51,13 +56,9 @@ iris_data = tibble(
 )
 ```
 
+# Problem 2
 
-# Problem 2 
-
-
-
-
-```{r message = FALSE}
+``` r
 #reading in and tidying the data
 file_names = list.files("data")
 
@@ -73,8 +74,7 @@ combined_df = combined_df %>%
   mutate(week = str_remove(week, "week_"))
 ```
 
-
-```{r}
+``` r
 #making spaghetti plot
 combined_df %>% 
   mutate(unique_id = paste(id, group, sep = "_")) %>% 
@@ -91,15 +91,14 @@ combined_df %>%
   theme(legend.position = "bottom") 
 ```
 
-It appears that the control group tended to have lower values than the experiment group, especially as time progressed. 
+![](p8105_hw5_crf2147_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
 
+It appears that the control group tended to have lower values than the
+experiment group, especially as time progressed.
 
+# Problem 3
 
-
-# Problem 3 
-
-
-```{r}
+``` r
 #writing function to run regression 
 sim_regression = function(beta1, n = 30, beta0 = 2) {
   
@@ -117,7 +116,7 @@ sim_regression = function(beta1, n = 30, beta0 = 2) {
 }
 ```
 
-```{r}
+``` r
 #running simulation 10000 for beta1 = 0 
 output = vector("list", 10000)
 
@@ -128,9 +127,7 @@ for (i in 1:10000) {
 results_b1_0 = bind_rows(output)
 ```
 
-
-
-```{r}
+``` r
 #running sim for beta1 ={0,1,2,3,4,5,6}
 sim_results = 
   tibble(beta1 = 0:6) %>% 
@@ -141,8 +138,7 @@ sim_results =
   unnest(estimate_dfs)
 ```
 
-
-```{r}
+``` r
 #plotting proportion of rejections by beta1
 sim_results %>% 
   group_by(beta1) %>% 
@@ -157,11 +153,14 @@ sim_results %>%
   scale_x_continuous(name="Beta 1", breaks=0:6) 
 ```
 
-As effect size (beta 1) increases, the probability we reject the null approaches 1, and therefore the power increases significantly. By the time beta 1 is 6 given the experiment conditions, we are almost certain to reject the null. 
+![](p8105_hw5_crf2147_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
+As effect size (beta 1) increases, the probability we reject the null
+approaches 1, and therefore the power increases significantly. By the
+time beta 1 is 6 given the experiment conditions, we are almost certain
+to reject the null.
 
-
-```{r}
+``` r
 #calculating avg beta hat
 all_beta_avgs = sim_results %>% 
   group_by(beta1) %>% 
@@ -189,8 +188,17 @@ left_join(all_beta_avgs, sig_beta_avgs, by = "beta1") %>%
   scale_x_continuous(name="true beta 1", breaks=0:6) + 
   scale_y_continuous(name="average beta 1 hat", breaks=0:6) + 
   theme(legend.position = "bottom") 
-  
-
 ```
 
-The average beta 1 hat tends to be larger among those which rejected the mean. This is especially true among lower values of beta 1. For these, the null will only be rejected if the sampled beta 1 is much larger than 0, and therefore larger than the true beta 1. For larger values of beta 1 the null is almost always rejected, as the effect size is already large. Therefore, as beta 1 increases, the average of all approximate beta's approaches that of the only those which rejected the mean. When the true beta is 0, we are equally likely to reject because of very large or very small values, and this results in the two averages being essentially equal. 
+![](p8105_hw5_crf2147_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+
+The average beta 1 hat tends to be larger among those which rejected the
+mean. This is especially true among lower values of beta 1. For these,
+the null will only be rejected if the sampled beta 1 is much larger than
+0, and therefore larger than the true beta 1. For larger values of beta
+1 the null is almost always rejected, as the effect size is already
+large. Therefore, as beta 1 increases, the average of all approximate
+beta’s approaches that of the only those which rejected the mean. When
+the true beta is 0, we are equally likely to reject because of very
+large or very small values, and this results in the two averages being
+essentially equal.
